<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="Home"/>

        <item
            android:id="@+id/nav_incident_log"
            android:icon="@drawable/log_icon"
            android:title="@string/incident_log"/>

        <item
            android:id="@+id/nav_wake_words"
            android:icon="@drawable/wake_words_icon"
            android:title="@string/wake_words"/>

        <item
            android:id="@+id/nav_communications"
            android:icon="@drawable/communication_icon"
            android:title="@string/communications"/>

        <item
            android:id="@+id/nav_emergency_contacts"
            android:icon="@drawable/baseline_contact_emergency_24"
            android:title="@string/emergency_contacts"/>

        <item
            android:id="@+id/nav_local_resources"
            android:icon="@drawable/local_resources_icon"
            android:title="@string/local_resources"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/settings_icon"
            android:title="Profile"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="Settings"/>

        <item
            android:id="@+id/nav_safe_exit"
            android:icon="@drawable/safe_exit_icon"
            android:title="@string/safe_exit"/>
    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_icon"
                android:title="@string/logout"/>
        </menu>

    </item>

</menu>