<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/textViewTranscription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonViewDetails"
        app:layout_constraintBottom_toTopOf="@id/chipSeverity"
        android:text="@string/transcription"
        android:padding="4dp"/>

    <ImageButton
        android:id="@+id/buttonViewDetails"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:text="@string/view_details"
        android:contentDescription="@string/view_details_button" />

    <TextView
        android:id="@+id/textViewDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonViewDetails"
        android:text="DateTime"
        android:padding="4dp"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chipSeverity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTranscription"
        android:padding="4dp"
        android:layout_marginEnd="8dp"/> <!-- Updated this line -->

    <com.google.android.material.chip.Chip
        android:id="@+id/chipOrigin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User"
        app:layout_constraintStart_toEndOf="@id/chipSeverity"
        app:layout_constraintTop_toBottomOf="@id/textViewTranscription"
        android:padding="4dp"
        android:layout_marginStart="8dp"/> <!-- Try adjusting this margin -->


    <View
        android:id="@+id/bottomBorder"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
